docs: cover all three engines (MongoDB, PostgreSQL, MySQL) in DEPLOY.md